--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 
 </head>
 </body>
-
+<nav>
+  <ul style="list-style: none; margin: 0; padding: 0; display: flex; background: #333;">
+    <li style="margin: 0;">
+      <a href="#" style="display: block; padding: 14px 20px; color: white; text-decoration: none;">Home</a>
+    </li>
+    <li style="margin: 0;">
+      <a href="#" style="display: block; padding: 14px 20px; color: white; text-decoration: none;">Chi siamo</a>
+    </li>
+    <li style="margin: 0;">
+      <a href="#" style="display: block; padding: 14px 20px; color: white; text-decoration: none;">Servizi</a>
+    </li>
+    <li style="margin: 0;">
+      <a href="#" style="display: block; padding: 14px 20px; color: white; text-decoration: none;">Contatti</a>
+    </li>
+  </ul>
+</nav>
 <p> buona giornata </p>
 
 
